# pRNN_cppext

./: CMakeLists.txt  README.md  cpp2py.py  main.py  pRNN.cpp  pRNN_net.py  pRNN_net_new.py  prnn.cpp  prnn.py  prnn_baseline.py  setup.py  torch2jit.py  traced_enn_model.py  traced_enn_model_stacked.py
example/: check.py  example-usingApp.py  setup.py  test.py
example/py_based/: lltm_baseline.py
libtorch/: CMakeLists.txt  torch2jit.py
py/: pRNN_net.py
